--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^13.8.0",
     "react-redux": "^8.0.5",
     "yup": "^1.1.1"
