--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
+    "js-base64": "^3.7.5",
     "react": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-native": "0.71.3",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-flash-message": "^0.4.0",
     "react-native-image-crop-picker": "^0.39.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -27,7 +29,9 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^13.8.0",
+    "react-native-toast-message": "^2.1.6",
     "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0",
     "yup": "^1.1.1"
   },
   "devDependencies": {
