--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
     "js-base64": "^3.7.5",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-native": "0.71.3",
