--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.43.9",
     "react-native": "0.71.3",
     "react-native-encrypted-storage": "^4.0.3",
+    "react-native-fast-image": "^8.6.3",
     "react-native-flash-message": "^0.4.0",
     "react-native-image-crop-picker": "^0.39.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
