--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
-    "js-base64": "^3.7.5",
+    "bcrypt-react-native": "^1.1.1",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-hook-form": "^7.43.9",
@@ -32,7 +32,7 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-sqlite-2": "^3.6.2",
     "react-native-svg": "^13.8.0",
     "react-native-toast-message": "^2.1.6",
     "react-redux": "^8.0.5",
